# NyxCore

./: .gitattributes  .gitignore  LICENSE  README.md  build.gradle.kts  local.properties.example  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/dev/nyxcore/manager/: ExampleInstrumentedTest.kt  NativeAuthIntegrationTest.kt  NativeNetworkIntegrationTest.kt  NativeReleaseGateTest.kt  NativeTestBridge.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/cmake/: auth.cmake  mods.cmake  properties.cmake  security.cmake
app/src/main/cpp/mods/demo/: README.md  mod.cmake  mod.properties
app/src/main/cpp/mods/demo/src/: main.cpp
app/src/main/cpp/sdk/: result_bridge.h
app/src/main/cpp/sdk/include/: app.h  auth.h  crypto.h  engine.h  hook.h  memory.h  mod.h  network.h  stack.h  test.h  ui.h  utils.h  vfs_patcher.h
app/src/main/cpp/src/app_bridge/: android_context.cpp  android_context.h  auth.cpp  auth_config.cpp  auth_config.h  jni.cpp  jni.h  runtime.cpp  runtime.h  surface.cpp  test.cpp
app/src/main/cpp/src/core/: context.cpp  context.h  dispatcher.cpp  dispatcher.h
app/src/main/cpp/src/core/auth/: auth_client.cpp  auth_client.h  auth_context.cpp  auth_context.h  auth_device.cpp  auth_device.h  auth_facade.cpp  auth_facade.h  auth_session.cpp  auth_session.h  auth_store.cpp  auth_store.h  auth_types.h
app/src/main/cpp/src/core/auth/providers/mock/: mock_provider.cpp
app/src/main/cpp/src/core/auth/providers/wy/: wy_codec.cpp  wy_codec.h  wy_profile.cpp  wy_profile.h  wy_provider.cpp  wy_provider.h  wy_request.cpp  wy_request.h  wy_response.cpp  wy_response.h  wy_verify.cpp  wy_verify.h
app/src/main/cpp/src/core/manager/: module_controller.cpp  module_controller.h  module_record.h  module_registration.cpp  module_snapshot.h  module_spec.h  module_state_utils.h
app/src/main/cpp/src/crypto/: aes_256_gcm.cpp  blake2b.cpp  md5.cpp  rc4.cpp  sha256.cpp  xchacha20_poly1305.cpp
app/src/main/cpp/src/crypto/client/: http.cpp
app/src/main/cpp/src/crypto/config/: mbedtls_config.h
app/src/main/cpp/src/engines/: engine_sdk.cpp
app/src/main/cpp/src/engines/base/: engine_status.h
app/src/main/cpp/src/engines/unity/: il2cpp_resolver.cpp  il2cpp_resolver.h  il2cpp_runtime.cpp  il2cpp_runtime.h  unity_binding.cpp  unity_binding.h  unity_signature.cpp  unity_signature.h
app/src/main/cpp/src/engines/unreal/: ue_runtime.cpp  ue_runtime.h
app/src/main/cpp/src/overlay/glsurface/: glsurface_host.cpp  glsurface_host.h
app/src/main/cpp/src/overlay/imgui_bind/: imgui_bridge.cpp  imgui_bridge.h
app/src/main/cpp/src/overlay/input/: input_router.cpp  input_router.h
app/src/main/cpp/src/overlay/ui/: font_registry.cpp  font_registry.h  gif_player.cpp  gif_player.h  widgets.cpp
app/src/main/cpp/src/runtime/: runtime_result.h
app/src/main/cpp/src/runtime/hook/: hook_api.cpp  hook_backend.h  hook_registry.cpp  hook_registry.h  hook_types.h  inline_backend.cpp  inline_backend.h  plt_backend.cpp  plt_backend.h
app/src/main/cpp/src/runtime/loader/: native_library.cpp  native_library.h
app/src/main/cpp/src/runtime/memory/: memory_api.cpp  memory_area.cpp  memory_area.h  memory_attributes.cpp  memory_attributes.h  memory_freeze.cpp  memory_freeze.h  memory_improve.cpp  memory_improve.h  memory_inotify.cpp  memory_inotify.h  memory_linker.cpp  memory_map.cpp  memory_map.h  memory_normalizer.cpp  memory_normalizer.h  memory_permission.cpp  memory_permission.h  memory_process.cpp  memory_process.h  memory_procfs.cpp  memory_protect.cpp  memory_protect.h  memory_reader.cpp  memory_reader.h  memory_scan.cpp  memory_scan.h  memory_snapshot.cpp  memory_snapshot.h  memory_system.cpp  memory_system.h  memory_transaction.cpp  memory_transaction.h  memory_value.cpp  memory_value.h  memory_writer.cpp  memory_writer.h
app/src/main/cpp/src/runtime/stack/: stack_api.cpp  stack_base.cpp  stack_base.h  stack_context.cpp  stack_context.h  stack_frame.h  stack_hooks.cpp  stack_hooks.h  stack_normalizer.cpp  stack_normalizer.h  stack_repair.cpp  stack_repair.h  stack_trace.cpp  stack_trace.h
app/src/main/cpp/src/runtime/vfs/: io_redirector.cpp  io_redirector.h  module_patch.cpp  path_mapper.cpp  path_mapper.h  path_policy.cpp  path_policy.h  vfs_api.cpp
app/src/main/cpp/src/tests/: README.md
app/src/main/cpp/src/tests/integration/: auth_gate.cpp  release_gate.cpp
app/src/main/cpp/src/tests/probes/: native_probe.cpp  unity_probe.cpp
app/src/main/cpp/src/tests/suites/: crypto_vectors.cpp  engine.cpp  environment.cpp  module.cpp  network.cpp  runtime.cpp  string.cpp
app/src/main/cpp/src/tests/suites/auth/: auth.cpp  wy.cpp
app/src/main/cpp/src/tests/support/: auth_state.h  test_assert.h  time_profiler.cpp
app/src/main/cpp/src/utils/: json_utils.cpp  json_utils.h  logger.cpp  random.cpp  random.h
app/src/main/cpp/src/utils/string/: format.cpp  format.h  hex.cpp  hex.h  utf8.cpp  utf8.h
app/src/main/kotlin/dev/nyxcore/manager/: MainActivity.kt  NativeBridge.kt
app/src/main/kotlin/dev/nyxcore/manager/overlay/: NyxGLSurfaceView.kt
app/src/test/java/dev/nyxcore/manager/: ExampleUnitTest.kt
config/: active.properties
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
